--- a/GiftcardSite/app/src/main/res/menu/menu_scrolling.xml
+++ b/GiftcardSite/app/src/main/res/menu/menu_scrolling.xml
@@ -1,8 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.giftcardsite.ScrollingActivity"
-    tools:keep="@menu/menu_scrolling">
+    tools:context="com.example.giftcardsite.ScrollingActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
